# raylin

./: Cargo.toml  LICENSE  PRD.md  build.rs  clipboard.sqlite  emojis.json
config/: config.toml.default
src/: main.rs
src/core/: config.rs  daemon.rs  mod.rs  shortcuts.rs  window_manager.rs
src/models/: app_entry.rs  clipboard_item.rs  emoji_data.rs  mod.rs  note.rs  project.rs  todo_item.rs
src/plugins/: app_launcher.rs  clipboard_history.rs  emoji.rs  mod.rs  systemactions.rs
src/utils/: exec_parser.rs  fuzzy_search.rs  icon_resolver.rs  mod.rs
ui/: main_settings.slint  onboarding.slint  palette.slint  types.slint
ui/plugin/: app_launcher.slint  clipboard_history.slint  emoji.slint  systemactions.slint
ui/settings/: general.slint  plugins.slint  shortcuts.slint
