[package]
name = "wayland-palette"
version = "0.1.0"
edition = "2024"

[dependencies]
freedesktop-desktop-entry = "0.8.1"
global-hotkey = "0.7.0"
indexmap = { version = "2.13.0", features = ["serde"] }
nucleo = "0.5.0"
rusqlite = "0.38.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slint = { version = "1.15.1", features = ["renderer-femtovg", "renderer-skia"] }
tokio = { version = "1.50.0", features = ["full"] }
toml = "0.8"
walkdir = "2.5.0"
chrono = { version = "0.4", features = ["serde"] }
which = "7.0"

[build-dependencies]
slint-build = "1.15.1"

[dev-dependencies]
tempfile = "3.14"
